--- a/WebContent/pagoprovision.xhtml
+++ b/WebContent/pagoprovision.xhtml
@@ -73,7 +73,7 @@
 													<h:outputText for="NUPROFB" value="Provisión: " />
 													<p:inputText id="NUPROFB" value="#{GestorPagosProvision.sNUPROFB}" size="10" maxlength="9"/>
 
-													<p:commandButton value="Cargar" update="provision, msgs, popup" actionListener="#{GestorPagosProvision.cargarProvision}"/>
+													<p:commandButton value="Cargar" update="provision, msgs, popup" actionListener="#{GestorPagosProvision.cargarProvision}" onstart="statusDialog.show()" oncomplete="statusDialog.hide()"/>
 												</h:panelGrid>
 											</p:panel>
 										<p:commandButton value="Buscar Provisión" update="form:provisiones" oncomplete="dlgBuscarProvision.show()"/>
@@ -90,7 +90,7 @@
 										<h:panelGrid columns="4" cellpadding="5">
 
 											<h:outputText for="NUPROF" value="Provisión de fondos: " />
-											<p:inputText id="NUPROF" value="#{GestorPagosProvision.sNUPROF}" size="10" readonly="true"/>
+											<p:inputText id="NUPROF" value="#{GestorPagosProvision.sNUPROF}" size="10" disabled="true"/>
 
 											<h:outputText for="FEPFON" value="Fecha de cierre: " />
 											<p:inputText id="FEPFON" value="#{GestorPagosProvision.sFEPFON}" size="9" disabled="true"/>
@@ -142,14 +142,28 @@
 											<p:inputText id="ValorPagado" value="#{GestorPagosProvision.sValorPagado}" size="20" disabled="true"/>
 											<h:outputText value="¤"/>
 
-											<h:outputText for="FechaLimite" value="Primera fecha límite pago: " />
-											<p:inputText id="FechaLimite" value="#{GestorPagosProvision.sFechaLimite}" size="9" disabled="true"/>
-
 											<h:outputText for="FechaPagado" value="Fecha de pago: " />
 											<p:inputText id="FechaPagado" value="#{GestorPagosProvision.sFechaPagado}" size="9" disabled="true"/>
 
 										</h:panelGrid>
 									</p:panel>
+
+									<p:panel >
+										<h:panelGrid columns="5" cellpadding="5">
+
+											<h:outputText for="GastosPorPagar" value="Gastos por pagar: " />
+											<p:inputText id="GastosPorPagar" value="#{GestorPagosProvision.sGastosPorPagar}" size="6" disabled="true"/>
+
+											<h:outputText for="ValorPorPagar" value="Valor por pagar: " />
+											<p:inputText id="ValorPorPagar" value="#{GestorPagosProvision.sValorPorPagar}" size="20" disabled="true"/>
+											<h:outputText value="¤"/>
+
+											<h:outputText for="FechaLimite" value="Primera fecha límite pago: " />
+											<p:inputText id="FechaLimite" value="#{GestorPagosProvision.sFechaLimite}" size="9" disabled="true"/>
+
+										</h:panelGrid>
+									</p:panel>
+
 
 										</h:panelGrid>
 									</p:fieldset>
@@ -233,7 +247,7 @@
 											<p:panel >
 												<h:panelGrid columns="3" cellpadding="5">
 													
-													<p:commandButton value="Buscar" update="popup, :form:provisiones" actionListener="#{GestorPagosProvision.buscarProvisiones}" oncomplete="dlgTablaProvisiones.show()"/>	
+													<p:commandButton value="Buscar" update="popup, :form:provisiones" actionListener="#{GestorPagosProvision.buscarProvisiones}" onstart="statusDialog.show()" oncomplete="statusDialog.hide(); dlgTablaProvisiones.show()"/>	
 													<p:commandButton value="Limpiar Plantilla" update="panelBuscarProvision" actionListener="#{GestorPagosProvision.limpiarPlantillaProvision}" />	
 
 												</h:panelGrid>
