PPv09d-b20140403-r1 -Gestion de Usuarios (parcial) -Correcciones en pagos y detalles.

--- a/WebContent/detallescomunidad.xhtml
+++ b/WebContent/detallescomunidad.xhtml
@@ -166,7 +166,7 @@
 									<h:outputText for="ACTIVOS" value="Activos asociados: "/>
 									<p:inputText id="ACTIVOS" value="#{GestorDetallesComunidad.sNumActivosComunidad}" size="2" readonly="true"/>
 
-									<p:commandButton value="Activos Asociados" onclick="dlgActivos.show()" type="button" />
+									<p:commandButton value="Ver" onclick="dlgActivos.show()" type="button" />
 
 								</h:panelGrid>
 
