--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -102,5 +102,9 @@
 							<p:menuitem value="Descargar" 
 								url="descargar.xhtml" icon="ui-icon-arrowthichk-1-s" />
 						</p:submenu>
+						<p:submenu label="Usuarios">
+							<p:menuitem value="Registrar"
+								url="registrausuario.xhtml" icon="ui-icon-arrowthick-1-e" />
+						</p:submenu>
 					</p:slideMenu>
 </html>
