PPv09d-b20140403-r2 -GastoTabla, ahora incluye los campos estado y fecha de pago. -Lista Gastos, refleja los campos estado y fecha de pago. -QM: Gastos,ListaGastos y ListasGastosProvision incluyen estado y fecha depago. - Revisado las dependencias de filtro en los gestores (parcial).

--- a/WebContent/listagastos.xhtml
+++ b/WebContent/listagastos.xhtml
@@ -149,6 +149,20 @@
 															<h:outputText value="#{gasto.FEDEVE}" />
 														</p:column>
 
+														<p:column>
+															<f:facet name="header">
+																<h:outputText value="Estado" />
+															</f:facet>
+															<h:outputText value="#{gasto.ESTADO}" />
+														</p:column>
+
+														<p:column>
+															<f:facet name="header">
+																<h:outputText value="Fecha de Pago" />
+															</f:facet>
+															<h:outputText value="#{gasto.FEEPAI}" />
+														</p:column>
+
 							<f:facet name="footer">
 								<h:commandLink>
 									<p:graphicImage value="recursos/excel.png" />  
